[gd_scene load_steps=10 format=2]

[ext_resource path="res://Enemy/MovementAI.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Health.gd" type="Script" id=4]
[ext_resource path="res://Enemy/DamageArea.gd" type="Script" id=5]
[ext_resource path="res://Enemy/ChargerEnemyStates/Walk.gd" type="Script" id=8]
[ext_resource path="res://StateMachine/FiniteStateMachine.gd" type="Script" id=9]
[ext_resource path="res://Enemy/ChargerEnemyStates/Charge.gd" type="Script" id=10]
[ext_resource path="res://Enemy/ChargerEnemyStates/Staggered.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.3333, 9.16667 )

[sub_resource type="CircleShape2D" id=2]
radius = 23.3928

[node name="EnemyCharger" type="KinematicBody2D" groups=[
"ENEMIES",
]]
scale = Vector2( 0.6, 0.6 )
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )
startStatePath = NodePath("FiniteStateMachine/Walk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.16667 )
shape = SubResource( 1 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )
maximumHealth = 150

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="DamageArea"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Charge" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 10 )

[node name="Walk" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 8 )

[node name="Staggered" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 11 )
[connection signal="damageTaken" from="Health" to="." method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="Health" to="." method="_on_Health_healthDepleted"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageArea/Timer" to="DamageArea" method="_on_Timer_timeout"]
